@@ -114,7 +114,6 @@ CL_RLIMIT dnl DEFS HAVE_GETRLIMIT, HAVE_SETRLIMIT, RLIMIT_RESOURCE_T, SETRLIMIT_
 AC_FUNC_VFORK dnl DEFS HAVE_VFORK_H, vfork
 CL_WAITPID dnl DEFS PID_T
 CL_RUSAGE dnl DEFS HAVE_SYS_RESOURCE_H, HAVE_GETRUSAGE, RUSAGE_WHO_T, HAVE_SYS_TIMES_H
-AC_HEADER_STAT dnl DEFS STAT_MACROS_BROKEN
 CL_STAT        dnl DEFS HAVE_LSTAT etc
 CL_ELOOP       dnl DEFS ELOOP_VALUE
 CL_CLOSEDIR    dnl DEFS VOID_CLOSEDIR
